srcs/tester/base/map/swap_std/log.txt
./base/map/swap_std/patched.cpp:7:3: error: use of undeclared identifier 'ft'
  ft::map<char,int> foo,bar;
  ^
./base/map/swap_std/patched.cpp:9:3: error: use of undeclared identifier 'foo'
  foo['x']=100;
  ^
./base/map/swap_std/patched.cpp:10:3: error: use of undeclared identifier 'foo'
  foo['y']=200;
  ^
./base/map/swap_std/patched.cpp:12:3: error: use of undeclared identifier 'bar'
  bar['a']=11;
  ^
./base/map/swap_std/patched.cpp:13:3: error: use of undeclared identifier 'bar'
  bar['b']=22;
  ^
./base/map/swap_std/patched.cpp:14:3: error: use of undeclared identifier 'bar'
  bar['c']=33;
  ^
./base/map/swap_std/patched.cpp:16:8: error: use of undeclared identifier 'foo'; did you mean 'for'?
  swap(foo,bar);
       ^~~
       for
./base/map/swap_std/patched.cpp:16:8: error: expected expression
./base/map/swap_std/patched.cpp:16:12: error: use of undeclared identifier 'bar'
  swap(foo,bar);
           ^
./base/map/swap_std/patched.cpp:19:8: error: use of undeclared identifier 'ft'
  for (ft::map<char,int>::iterator it=foo.begin(); it!=foo.end(); ++it)
       ^
./base/map/swap_std/patched.cpp:19:39: error: use of undeclared identifier 'foo'; did you mean 'for'?
  for (ft::map<char,int>::iterator it=foo.begin(); it!=foo.end(); ++it)
                                      ^~~
                                      for
./base/map/swap_std/patched.cpp:19:39: error: expected expression
./base/map/swap_std/patched.cpp:19:56: error: use of undeclared identifier 'foo'; did you mean 'for'?
  for (ft::map<char,int>::iterator it=foo.begin(); it!=foo.end(); ++it)
                                                       ^~~
                                                       for
./base/map/swap_std/patched.cpp:19:56: error: expected expression
./base/map/swap_std/patched.cpp:23:8: error: use of undeclared identifier 'ft'
  for (ft::map<char,int>::iterator it=bar.begin(); it!=bar.end(); ++it)
       ^
./base/map/swap_std/patched.cpp:23:39: error: use of undeclared identifier 'bar'
  for (ft::map<char,int>::iterator it=bar.begin(); it!=bar.end(); ++it)
                                      ^
./base/map/swap_std/patched.cpp:23:56: error: use of undeclared identifier 'bar'
  for (ft::map<char,int>::iterator it=bar.begin(); it!=bar.end(); ++it)
                                                       ^
17 errors generated.
